@@ -132,6 +132,7 @@ Rock (German Free Play)
 Rock Encore (Free Play)
 Rock Encore (German)
 Rock Encore (German Free Play)
+Rocky (French speech)
 Rollergames (AD-2 Prototype) (sample/prototype with 8 drop targets)
 Rollergames (LF-2 French)
 Rollergames (LF-3 French)
